--- a/style.css
+++ b/style.css
@@ -4,23 +4,35 @@ h1 {
 	font-family: Tahoma, Geneva, sans-serif;
 }
 
+p {
+    font-family: Tahoma, Geneva, sans-serif;
+    padding: 14px 16px;
+}
+
+#icons {
+    text-align: right;
+    padding-right: 14px;
+    padding-top: 14px;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    text-align: center;
     overflow: hidden;
     background-color: #333;
 }
 
 li {
-    float: left;
+    display: inline-block;
 }
 
 li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding: 14px 200px;
     text-decoration: none;
     font-family: Tahoma, Geneva, sans-serif;
 }
@@ -34,6 +46,3 @@ iframe {
 	margin: 0 auto;
 	display: block;
 }
-/*.active {
-    background-color: #4CAF50;
-}*/
