--- a/style.css
+++ b/style.css
@@ -1,48 +1,47 @@
-h1 {
+#navbar-font {
+	font-family: 'Sanchez', serif;
+}
+
+.image {
+	height: 100%;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+}
+
+.text {
 	text-align: center;
-	text-shadow: 2px 2px #ffffff;
-	font-family: Tahoma, Geneva, sans-serif;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	color: black;
+	font-family: 'Work-Sans', sans-serif;
 }
 
-p {
-    font-family: Tahoma, Geneva, sans-serif;
-    padding: 14px 16px;
+.text h1 {
+		font-family: 'Sanchez', serif;
+		color: white;
 }
 
-#icons {
-    text-align: right;
-    padding-right: 14px;
-    padding-top: 14px;
+#blurb {
+	color: white;
+	font-family: 'Work-Sans', sans-serif;
 }
 
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    text-align: center;
-    overflow: hidden;
-    background-color: #333;
+#paragraph-post {
+	text-align: center;
+	font-family: 'Work-Sans', sans-serif;
 }
 
-li {
-    display: inline-block;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 200px;
-    text-decoration: none;
-    font-family: Tahoma, Geneva, sans-serif;
-}
-
-/* Change the link color to black on hover */
-li a:hover {
-    background-color: #111;
-}
-
-iframe {
-	margin: 0 auto;
-	display: block;
+.post {
+	width: 100%;
+	height: 100%;
+	padding-right: 100px;
+	padding-left: 100px;
+	text-align: center;
+	font-family: 'Sanchez', serif;
+	padding-top: 100px;
+	color: white;
 }
