--- a/style.css
+++ b/style.css
@@ -35,6 +35,11 @@
 	font-family: 'Work-Sans', sans-serif;
 }
 
+#contactInfo {
+	text-align: left;
+	font-family: 'Work-Sans', sans-serif;
+}
+
 .post {
 	width: 100%;
 	height: 100%;
@@ -44,4 +49,10 @@
 	font-family: 'Sanchez', serif;
 	padding-top: 100px;
 	color: white;
+}
+
+.card {
+	margin-left: 50px;
+	margin-top: 75px;
+	padding-bottom: 15px;
 }
