--- a/style.css
+++ b/style.css
@@ -21,8 +21,8 @@
 }
 
 .text h1 {
-		font-family: 'Sanchez', serif;
-		color: white;
+	font-family: 'Sanchez', serif;
+	color: white;
 }
 
 #blurb {
@@ -49,6 +49,7 @@
 	text-align: center;
 	font-family: 'Sanchez', serif;
 	padding-top: 100px;
+	padding-bottom: 100px;
 	color: white;
 }
 
@@ -56,4 +57,8 @@
 	margin-left: 50px;
 	margin-top: 75px;
 	padding-bottom: 15px;
+}
+
+.img-fluid {
+	height: 450px;
 }
